- Changed to released version of swagger-php 2.0 - Added documentation of activity checkin endpoint - Added router and controller to swagger-ui for exploring the API
